# ServerCluster

./: CMakeLists.txt  main.c
Dispatcher/: JobDispatcher.c  JobDispatcher.h
Jobs/: Job.c  Job.h  JobReader.c  JobReader.h
Queue/: DoubleLinkedListQueue.c  DoubleLinkedListQueue.h
Resources/: commands.txt
Utilities/: Utilities.c  Utilities.h
Worker/: Worker.c  Worker.h
